# InariTx

./: .gitignore  CMakeLists.txt  README.md
docs/: ARCHITECTURE.md
src/: main.cpp
src/blockchain/: bitcoin_client.cpp  bitcoin_client.h  client.cpp  client.h
src/i18n/: translations.cpp  translations.h
src/pdf/: pdf_generator.cpp  pdf_generator.h
src/qr/: qr_generator.cpp  qr_generator.h
src/utils/: config.cpp  config.h  error.cpp  error.h
